infrastructure/vault-secrets-operator/vso-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vso-egress
  namespace: vso-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault-secrets-operator
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vault
            app.kubernetes.io/name: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
